<?xml version="1.0"?>
<package format="2">
  <name>hexapod_control</name>
  <version>0.0.0</version>
  <description>The hexapod_control package</description>
  <maintainer email="uchiwuwu@todo.todo">uchiwuwu</maintainer>

  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <build_depend>message_generation</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
